# 2048

./: .editorconfig  README.md  meson.build
include/: display.hpp  game.hpp
src/: display.cpp  game.cpp  main.cpp
